--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://kaksha:your-password@cluster0.ph5aqxi.mongodb.net
 CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET=123
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=456
+REFRESH_TOKEN_EXPIRY=10d
