--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://kaksha:your-password@cluster0.ph5aqxi.mongodb.net
 CORS_ORIGIN=*
+# CORS_ORIGIN=http://localhost:3000
 
 ACCESS_TOKEN_SECRET=123
 ACCESS_TOKEN_EXPIRY=1d
