--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://kaksha:your-password@cluster0.ph5aqxi.mongodb.net
+MONGODB_URI=mongodb+srv://kaksha:<password>@cluster0.ph5aqxi.mongodb.net/videotube?retryWrites=true&w=majority
+# mongodb+srv://kaksha:your-password@cluster0.ph5aqxi.mongodb.net
 CORS_ORIGIN=*
 # CORS_ORIGIN=http://localhost:3000
 
